# openapi-sdk-python

./: LICENSE  README.md  README_en.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
example/: im_message_echo.py
src/feihan/: __init__.py  client.py
src/feihan/core/: api_client.py  config.py  consts.py  crypto.py  http_client.py  logger.py  time_manager.py  types.py  version.py  ws_client.py
src/feihan/internal/: transport.py
src/feihan/service/im/: __init__.py
src/feihan/service/im/v1/: __init__.py  chat.py  chat_model.py  message.py  message_enum.py  message_event.py  message_model.py  v1.py
tests/: __init__.py
