[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feihan-sdk"
version = "0.28.100"
description = "飞函官方 OpenAPI SDK for Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "上海飞函安全科技有限公司 (Shanghai Feihan Security Technology Co., Ltd.)" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://feihanim.cn/"
Repository = "https://github.com/feihan-im/openapi-sdk-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
